--- a/src/frontend/App/App.sass
+++ b/src/frontend/App/App.sass
@@ -2,6 +2,7 @@
   background-color: lightblue
   #header
     background-color: teal
+    width: 100%
     height: 3rem
     display: flex
     flex-flow: nowrap row
