--- a/src/frontend/App/App.sass
+++ b/src/frontend/App/App.sass
@@ -1,10 +1,4 @@
 #App
-  background-color: lightblue
-  #header
-    background-color: teal
-    width: 100%
-    height: 3rem
-    display: flex
-    flex-flow: nowrap row
-    justify-content: space-evenly
-    align-items: center
+  background-color: #3e037f
+  width: 100%
+  height: 100%
